# duck-engine

./: .gitignore  CMakeLists.txt  README.md
include/application/: Application.hpp
include/engine/camera/: Camera.hpp
include/engine/component/: Component.hpp  Transform.hpp
include/engine/light/: Attenuation.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp
include/engine/math/: Quaternion.hpp
include/engine/model/: Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp  Vertex.hpp
include/engine/scene/: Scene.hpp
include/engine/shader/: Shader.hpp
include/manager/: Manager.hpp
include/manager/display/: DisplayManager.hpp
include/manager/shader/: ShaderManager.hpp
include/utility/file/: FileUtility.hpp
resources/models/duck/: Duck.mtl
scripts/: run.sh
shaders/grid/: grid.frag  grid.vert
shaders/scene/: scene.frag  scene.vert
src/: main.cpp
src/application/: Application.cpp
src/engine/camera/: Camera.cpp
src/engine/component/: Component.cpp  Transform.cpp
src/engine/light/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
src/engine/math/: Quaternion.cpp
src/engine/model/: Mesh.cpp  Model.cpp
src/engine/scene/: Scene.cpp
src/engine/shader/: Shader.cpp
src/engine/sound/: SoundBuffer.cpp  SoundPlayer.cpp  SoundSource.cpp
src/manager/: Manager.cpp
src/manager/display/: DisplayManager.cpp
src/manager/shader/: ShaderManager.cpp
src/utility/file/: FileUtility.cpp
